fix <legend> text-align: left;

--- a/6551071022_BTTKWEB_9/Styles/style.css
+++ b/6551071022_BTTKWEB_9/Styles/style.css
@@ -38,3 +38,7 @@
     margin: auto;
     text-align: center;
 }
+
+.legend {
+    text-align: left;
+}
